# blog-rs

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml  spec.yml
.github/workflows/: ci-cd.yml  pr-check.yml
.sqlx/: query-0f42771b74740d052faa22728b0f0d71e2ce34936e205a47ade5fe97e052242d.json  query-1483b2e662c72f2faa018d7257bf02487489ed3dbf85d4acda64cd8e71807696.json
configuration/: base.yaml  development.yaml
migrations/: 20250513171737_create_users_table.sql  20250725181428_new_migration.sql  20250727160642_create_subscriptions_table.sql
scripts/: deploy.sh  init_db.sh  migrate.sh  test.sh
secrets/: database_url  jwt_secret  postgres_password
src/: app.rs  config.rs  containers.rs  lib.rs  logger.rs  main.rs  middleware.rs  startup.rs
src/api/controllers/: health_check.rs
src/api/health_check/: handlers.rs  routes.rs
src/api/posts/: handlers.rs  routes.rs
src/api/routes/: health_check.rs
src/routes/: subscribe.rs
tests/: health_check.rs  subscriptions.rs  utils.rs
