[package]
name = "blog-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
config = "0.15.11"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.16.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.5"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
