[package]
name = "axum-blog"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "blog"

[dependencies]
axum = "0.8.4"
config = "0.15.13"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["tracing"] }
