[package]
name = "axum-blog"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "blog"

[dependencies]
axum = "0.8.4"
config = "0.15.13"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["tracing"] }
log = "0.4.27"
tracing = { version = "0.1.41", features = ["log"] }
tower-http = { version = "0.6.6", features = ["trace", "request-id"] }
http = "1.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3.10"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
